--- a/configurations/nginx/tuantuan.conf
+++ b/configurations/nginx/tuantuan.conf
@@ -1,15 +1,14 @@
 server {
 
-    listen 80;
-    server_name tuantuan.ssast.org;
+    listen 8000;
+    server_name 115.28.212.177:8000;
     keepalive_timeout    15;
 
     access_log /var/log/nginx/tuantuan_access.log;
     error_log /var/log/nginx/tuantuan_error.log;
 
     location / {
-        uwsgi_pass unix:/tmp/uwsgi_tuantuan;
+        uwsgi_pass unix:/tmp/tuantuan_uwsgi.sock;
         include uwsgi_params;
     }
 }
-
