update some settings to fit the Alicloud server

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /.idea
 /.svn
 *.pyc
+*.swp
+*~
+~*
 TuanTuan/settings.py
 TuanTuan/TuanTuanApp/static/img/upload/
 TuanTuan/static/img/upload/
 /TsinghuaSpider-master/.idea
+/build
