--- a/configurations/init/tuantuan_uwsgi.ini
+++ b/configurations/init/tuantuan_uwsgi.ini
@@ -3,11 +3,11 @@
 
 # Django-related settings
 # the base directory (full path)
-chdir           = /root/info/TuanTuan
+chdir           = /root/tmp/TuanTuan
 # Django's wsgi file
 module          = localwsgi
-# the virtualenv (full path)
-home            = /root/info
+
+home            = /usr
 
 # process-related settings
 # master
@@ -15,8 +15,12 @@ master          = true
 # maximum number of worker processes
 processes       = 10
 # the socket (use the full path to be safe
-socket          = /tmp/tuantuan_uwsgi.sock
+http            = 0.0.0.0:7800
 # ... with appropriate permissions - may be needed
 chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
+#
+listen    		= 1000
+#
+#uid   			= softeng
